colocando o cadastro funcionando

--- a/senac-front/src/app/components/empregadores/empregadores-form/empregadores-form.component.html
+++ b/senac-front/src/app/components/empregadores/empregadores-form/empregadores-form.component.html
@@ -36,10 +36,10 @@
               Numero do Local: <br>
               <input required  [(ngModel)]="enderecoTemp.numero" type="text" class="form-control" name="numero">
               <br />
-              Usuário: <br>
+              Usuário:<span style="color: red">*</span> <br>
               <input required [(ngModel)]="empregador.usuario.username" type="text" class="form-control" name="numero">
               <br />
-              Senha: <br>
+              Senha:<span style="color: red">*</span> <br>
               <input required [(ngModel)]="empregador.usuario.password" type="password" class="form-control" name="numero">
               <br />
               
