esqueci de manda isso aqui

--- a/senac-front/src/app/components/layout/menu/menu.component.html
+++ b/senac-front/src/app/components/layout/menu/menu.component.html
@@ -75,6 +75,9 @@
                 <li>
                   <a class="dropdown-item" href="/empregador">Empregador</a>
                 </li>
+                <li>
+                  <a class="dropdown-item" href="/dashboard">Dashboard</a>
+                </li>
               </ul>
             </li>
           </ul>
