Ajeitada no site + otimizações + qualidade de vida

--- a/senac-front/src/app/components/candidatos/candidatos-form/candidatos-form.component.html
+++ b/senac-front/src/app/components/candidatos/candidatos-form/candidatos-form.component.html
@@ -5,6 +5,12 @@
     <div class="col-4">
       <div class="card" style="margin-top: 20px;">
         <div class="card-body centralizar">
+          <a href="/vagas" 
+              style="position: absolute; top: 5px; left: 10px; font-weight: bold; 
+                      font-size: 20px; text-decoration: none; color: black; cursor: pointer;"
+              aria-label="Fechar">
+              <i class="fas fa-times"></i>
+            </a>
           <h2>Cadastro de Candidato</h2>
 
 
