--- a/senac-front/src/app/components/layout/login/login.component.html
+++ b/senac-front/src/app/components/layout/login/login.component.html
@@ -7,6 +7,15 @@
         <div class="col-4">
 
             <div class="card">
+              
+            <a href="/vagas" 
+              style="position: absolute; top: 5px; left: 10px; font-weight: bold; 
+                      font-size: 20px; text-decoration: none; color: black; cursor: pointer;"
+              aria-label="Fechar">
+              <i class="fas fa-times"></i>
+            </a>
+
+
                 <div class="card-body border border-dark rounded">
                     <h2>Autentique-se:</h2>
 
