--- a/senac-front/src/app/components/candidatos/candidatos-list/candidatos-list.component.html
+++ b/senac-front/src/app/components/candidatos/candidatos-list/candidatos-list.component.html
@@ -23,10 +23,8 @@
                   </span>
                 </form>
 
-
-
-
-
+                <ngb-pagination (pageChange)="trocarPagina($event)" [pageSize]="pagina.size"
+                [collectionSize]="pagina.totalElements" [(page)]="numPaginaAtual" [boundaryLinks]="true" />
 
           
                 <div class="alinharADireita">
